Thu Dec  4 00:43:10 CET 2014
	If "Connection: upgrade" is requested, do not add
	"Connection: Keep-Alive" in the response. -GJ

Tue Nov 18 13:52:29 CET 2014
	Call MHD_cleanup_connections() during MHD_DAEMON_INFO_CURRENT_CONNECTIONS
	processing for more accurate results. -MS

Wed Oct 29 20:45:21 CET 2014
	Adding MHD_OPTION_LISTENING_ADDRESS_REUSE option allowing clients
	to force allowing re-use of the address:port combination
	(SO_REUSEPORT). -MS

Wed Oct 29 16:27:05 CET 2014
	Adding MHD_DAEMON_INFO_CURRENT_CONNECTIONS to allow clients
	to query the number of active connections. -MS

Fri Oct  3 14:28:58 CEST 2014
	Releasing 0.9.38. -CG

Mon Sep 29 22:25:34 CEST 2014
	Properly decode '+' in URL-encoded POST data. -CG/KM

Fri Sep 12 17:32:09 CEST 2014
	Fix --disable-dauth configure option (#3543). -doostee

Thu Jun 26 21:06:04 CEST 2014
	Fix failure to terminate 'instantly' in thread-per-connection
	mode if there is a client with open connections.
	Thanks to Kenneth Mastro for reporting. -CG

Sun Jun 22 12:22:08 CEST 2014
	Actually, avoid locking on response as responses must
	not be modified in a connection-specific way; instead
	modify the connection's data buffer to add missing
	responses headers.  If we are forced to add
	"Connection: close", suppress output of conflicting
	application-provided "Connection: Keep-Alive" header. -CG

Sun Jun 22 00:22:08 CEST 2014
	Lock on response if adding headers, needed if response
	object is shared across threads and connections. -CG

Thu Jun 19 17:32:32 CEST 2014
	Ensure that listen FD is bound to epoll FD even before
	MHD_run() is called if running with MHD_USE_EPOLL_LINUX_ONLY
	in combination with 'external select' mode.  Thanks to
	Marcos Pindado Sebastian for reporting. -CG

Sun Jun  8 15:10:44 CEST 2014
	Add 'MHD_set_response_options' as a way to set per-response
	flags.  Add flag to force HTTP 1.0-only conservative
	behavior, in particular suppressing adding "Connection"
	headers. -CG

Mon Jun  2 00:03:28 CEST 2014